add meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>hacklab</title>
+  <meta name="description" content="Portal page of hacklab.jp.">
   <link rel="stylesheet" href="/assets/node_modules/bulma/css/bulma.css">
   <link rel="stylesheet" href="/assets/node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/assets/css/style.css">
