Add twitch link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <a class="button is-rounded hero-button is-size-5" href="https://twitter.com/kazoookie">
             <i class="fa fa-twitter" aria-hidden="true"></i>
           </a>
+          <a class="button is-rounded hero-button is-size-5" href="https://www.twitch.tv/kazoookie">
+            <i class="fa fa-twitch" aria-hidden="true"></i>
+          </a>
           <a class="button is-rounded hero-button is-size-5" href="https://github.com/kazookie">
             <i class="fa fa-github" aria-hidden="true"></i>
           </a>
